--- a/static/css/type.css
+++ b/static/css/type.css
@@ -4,8 +4,9 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  line-height: 0.75;
-  margin-top: 1.5em;
+  line-height: 1.4;
+  margin-top: 1.25em;
+  margin-bottom: 0.5em;
 }
 
 /* paragraph */
